# web-service-uptime-axum

./: Cargo.toml  Containerfile  Makefile  README.md  cspell.json  llms.json  llms.txt
src/: app.rs  main.rs
