[package]
name = "web-service-uptime-axum"
version = "1.0.0"
edition = "2024"
authors = ["Joel Parker Henderson <joel@joelparkerhenderson.com>"]
license = "GPL-2.0 OR GPL-3.0"
homepage = "https://github.com/joelparkerhenderson/web-service-uptime-axum"
repository = "https://github.com/joelparkerhenderson/web-service-uptime-axum"
documentation = "https://github.com/joelparkerhenderson/web-service-uptime-axum"

description = """
Web service that displays the program's uptime by using Axum, Tokio, Rust.
"""

readme = "README.md"
keywords = ["demo", "rust", "test", "axum", "web"]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "~0.8.4" } # Web framework that focuses on ergonomics and modularity.
tokio = { version = "~1.45.1", features = ["full"] } # Event-driven, non-blocking I/O platform.
tracing = { version = "~0.1.41" } #  Application-level tracing for Rust.
tracing-subscriber = { version = "~0.3.19", features = ["env-filter"] } # Utilities for `tracing` subscribers.
